--- a/client/src/components/styles/userStart.scss
+++ b/client/src/components/styles/userStart.scss
@@ -85,6 +85,7 @@ $red: #ff5757;
           &:focus {
             border-color: $blue;
           }
+          min-width: 1rem;
         }
         input,
         .pass,
@@ -97,7 +98,7 @@ $red: #ff5757;
         section {
           position: relative;
         }
-        .checkbox {
+        & > .checkbox {
           grid-column: 1/3;
           display: flex;
           align-items: center;
