--- a/client/src/components/styles/landingPage.scss
+++ b/client/src/components/styles/landingPage.scss
@@ -52,6 +52,8 @@ $green: #1be6d6;
         }
       }
       .clas {
+        flex: 1;
+        justify-content: flex-end;
         z-index: 1;
         margin-right: 0;
         display: flex;
