--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -35,7 +35,8 @@ input::-webkit-inner-spin-button {
   -webkit-appearance: none;
   margin: 0;
 }
-#portal {
+#portal,
+#confirm {
   position: fixed;
   height: 100vh;
   width: 100vw;
