--- a/client/src/components/styles/account.scss
+++ b/client/src/components/styles/account.scss
@@ -54,7 +54,7 @@ $red: #ff5757;
         .referral {
           padding: 0.7rem 0;
           border-bottom: 1px solid rgba(0, 0, 0, 0.1);
-          margin-bottom: 1.5rem;
+          margin-bottom: 1rem;
           button {
             cursor: pointer;
           }
@@ -65,6 +65,7 @@ $red: #ff5757;
           }
         }
         .logout {
+          border-radius: 0 0 0.7rem 0.7rem;
           min-width: 10rem;
           cursor: pointer;
           display: flex;
@@ -73,9 +74,18 @@ $red: #ff5757;
           color: #fc0660;
           font-size: 1.3rem;
           font-weight: bold;
-          opacity: 0.5;
+          opacity: 1;
+          margin: -1rem;
+          padding: 1rem;
           &:hover {
-            opacity: 1;
+            background: #fc0660;
+            color: white;
+            svg {
+              path {
+                fill: white;
+              }
+            }
+            // opacity: 0.5;
           }
         }
       }
@@ -105,9 +115,10 @@ $red: #ff5757;
       grid-gap: 1rem;
       grid-auto-rows: min-content;
       overflow-y: auto;
-      max-height: calc(100vh - 73px - 2.2rem);
       li {
         height: min-content;
+        font-weight: 500;
+        font-size: 0.95rem;
         a {
           padding: 0.7rem;
           .icon {
@@ -403,10 +414,70 @@ $red: #ff5757;
   }
   align-items: center;
   grid-gap: 1rem;
+  .bell {
+    cursor: pointer;
+    margin-right: 0.5rem;
+    border: none;
+    outline: none;
+    background: none;
+    display: grid;
+    place-items: center;
+    svg {
+      height: 1.3rem;
+      width: 1.3rem;
+      path {
+        fill: rgba(0, 0, 0, 0.5);
+      }
+    }
+    &.unread {
+      svg {
+        path {
+          fill: $blue;
+        }
+      }
+    }
+  }
   .name {
     font-size: 1rem;
     font-weight: 500;
     text-transform: capitalize;
+  }
+  .notiWrapper {
+    position: absolute;
+    top: 100%;
+    box-shadow: 0 0 1rem rgba(0, 0, 0, 0.1);
+    border-radius: 0.7rem;
+    right: 80%;
+    max-height: 70vh;
+    overflow: auto;
+    width: 130%;
+    max-width: 100vw;
+    background: white;
+    li {
+      &:not(:last-child) {
+        border-bottom: 1px solid rgba(0, 0, 0, 0.05);
+      }
+      position: relative;
+      time {
+        position: absolute;
+        font-size: 0.8rem;
+        right: 1rem;
+        color: rgba(0, 0, 0, 0.5);
+      }
+      .title {
+        font-size: 0.9rem;
+        font-weight: 500;
+      }
+      .body {
+        font-size: 0.8rem;
+        color: rgba(0, 0, 0, 0.6);
+        display: -webkit-box;
+        -webkit-box-orient: vertical;
+        -webkit-line-clamp: 2;
+        overflow: hidden;
+      }
+      padding: 0.7rem 1rem;
+    }
   }
 }
 .homeContainer,
@@ -625,6 +696,9 @@ $red: #ff5757;
             .done {
               opacity: 1;
             }
+            .running {
+              opacity: 0;
+            }
           }
           .onhold {
             .icons {
@@ -644,6 +718,42 @@ $red: #ff5757;
             }
           }
         }
+        &.dispute.inProgress {
+          .onhold {
+            .running {
+              opacity: 0;
+            }
+          }
+        }
+        &.dispute.resolved {
+          .pending {
+            .icons {
+              .filled {
+                display: block;
+              }
+            }
+            .done {
+              opacity: 1;
+            }
+          }
+          .onhold {
+            .icons {
+              .filled {
+                display: block;
+              }
+            }
+            .done {
+              opacity: 1;
+            }
+          }
+          .released {
+            .icons {
+              .filled {
+                display: block;
+              }
+            }
+          }
+        }
       }
       &.buyer {
         .steps {
@@ -656,6 +766,9 @@ $red: #ff5757;
               }
               .done {
                 opacity: 1;
+              }
+              .running {
+                opacity: 0;
               }
             }
             .onhold {
@@ -926,6 +1039,11 @@ $red: #ff5757;
         }
         .name {
           text-transform: capitalize;
+          .lastSeen {
+            display: block;
+            font-size: 0.8em;
+            color: rgba(0, 0, 0, 0.5);
+          }
         }
       }
       .pay {
@@ -990,6 +1108,9 @@ $red: #ff5757;
           }
           &.client {
             margin-left: 0;
+            & ~ &.user {
+              border: 1px dashed red;
+            }
             .text {
               border-radius: 1rem 1rem 1rem 0;
               background: $blue;
@@ -1132,16 +1253,129 @@ $red: #ff5757;
   }
 }
 
+.productContainer {
+  height: calc(100% + 2rem);
+  overflow-y: auto;
+  margin: -1rem 0;
+  padding: 1rem 3rem;
+  .benner {
+    padding: 1rem 0;
+    font-size: 1.2rem;
+    font-weight: 500;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    button {
+      background: $blue;
+      color: white;
+      border: 2px solid $blue;
+      padding: 0.5rem 1rem;
+      border-radius: 2rem;
+      outline: none;
+      svg {
+        line {
+          stroke: white;
+        }
+      }
+      display: flex;
+      grid-gap: 0.5rem;
+      align-items: center;
+      font-weight: 600;
+      font-size: 1rem;
+      &:hover {
+        background: white;
+        color: $blue;
+        svg {
+          line {
+            stroke: $blue;
+          }
+        }
+      }
+    }
+  }
+  .products {
+    max-width: 85rem;
+    display: grid;
+    grid-gap: 1rem;
+    .placeholder {
+      border-radius: 0.7rem;
+      padding: 3rem 1rem;
+      background: rgba(0, 0, 0, 0.03);
+      text-align: center;
+      color: rgba(0, 0, 0, 0.5);
+      font-style: italic;
+    }
+    .product {
+      padding: 0.5rem;
+      border-radius: 0.7rem;
+      background: $lightGreen2;
+      display: flex;
+      align-items: center;
+      grid-gap: 1rem;
+      position: relative;
+      img {
+        height: 4rem;
+        width: 4rem;
+      }
+      .name {
+        font-size: 1.1rem;
+        font-weight: 500;
+      }
+      .dscr {
+        font-size: 0.8rem;
+        color: rgba(0, 0, 0, 0.5);
+        margin-bottom: 0.3rem;
+      }
+      .price {
+        font-weight: 500;
+      }
+      .btns {
+        position: absolute;
+        right: 0.5rem;
+        display: none;
+        grid-gap: 0.25rem;
+        outline: none;
+        button {
+          cursor: pointer;
+          border: 2px solid $blue;
+          background: $blue;
+          color: white;
+          padding: 0.2rem 1rem;
+          border-radius: 2rem;
+          &.delete {
+            background: $red;
+            border-color: $red;
+          }
+          &:hover {
+            background: none;
+            color: $blue;
+            &.delete {
+              color: $red;
+            }
+          }
+        }
+      }
+      &:hover {
+        .btns {
+          display: grid;
+        }
+      }
+    }
+  }
+}
+
 .modal.milestoneRequest,
 .modal.disputeForm,
 .addAddress,
 .modal.addMoney,
 .modal.paymentMethodsForm,
 .modal.editPaymentMethod,
+.modal.productForm,
 .modal.milestoneReleaseForm {
   border-radius: 0.7rem;
   width: 100%;
   display: grid;
+  overflow: auto;
   .head {
     position: sticky;
     top: 0;
@@ -1164,8 +1398,6 @@ $red: #ff5757;
     }
   }
   form {
-    max-height: calc(100vh - 2rem - 62px);
-    overflow-y: scroll;
     flex-wrap: wrap;
     .pBtm {
       height: 1px;
@@ -1515,6 +1747,64 @@ $red: #ff5757;
   }
 }
 
+.modal.productForm {
+  max-width: 45rem;
+  form {
+    padding: 2rem;
+    display: grid;
+    grid-template-columns: 1fr 5rem;
+    grid-gap: 2rem;
+    grid-column-gap: 1rem;
+    section {
+      label {
+        display: block;
+        font-size: 0.8rem;
+        color: rgba(0, 0, 0, 0.7);
+      }
+      input,
+      textarea {
+        font-size: 1rem;
+        width: 100%;
+        border: none;
+        outline: none;
+        padding: 0.5rem 0;
+        border-bottom: 1px solid rgba(0, 0, 0, 0.3);
+        &:focus {
+          border-color: $blue;
+        }
+        resize: none;
+      }
+    }
+    .dscr {
+      grid-column: 1/3;
+      textarea {
+        height: 7rem;
+      }
+    }
+    button {
+      grid-column: 1/3;
+      width: max-content;
+      padding: 0.7rem 2.5rem;
+      border: none;
+      color: white;
+      margin: auto;
+      margin-right: 0;
+      margin-top: 2rem;
+      border-radius: 2rem;
+      cursor: pointer;
+      & {
+        background: linear-gradient(139deg, $blue 0%, rgb(11, 26, 69) 150%);
+        &:hover {
+          font-weight: bold;
+          color: $blue;
+          background: none;
+          box-shadow: inset 0 0 0 2px $blue;
+        }
+      }
+    }
+  }
+}
+
 .milestonesForm {
   padding: 2rem;
   display: flex;
@@ -1543,6 +1833,146 @@ $red: #ff5757;
       border-bottom: 1px solid rgba(0, 0, 0, 0.38);
       &:focus-within {
         border-color: $blue;
+      }
+    }
+    .productSearch {
+      position: relative;
+      .productSearchList {
+        display: none;
+        z-index: 10;
+        position: absolute;
+        top: 102%;
+        background: white;
+        box-shadow: 0 0 0.5rem rgba(0, 0, 0, 0.1);
+        width: 100%;
+        border-radius: 0 0 0.5rem 0.5rem;
+        padding: 0.5rem 0;
+        max-height: 15rem;
+        overflow: auto;
+        li {
+          .addedLabel {
+            font-size: 0.8rem;
+            color: rgba(0, 0, 0, 0.4);
+            position: absolute;
+            right: 0.3rem;
+            pointer-events: none;
+            font-style: italic;
+            padding: 0.2rem 0.5rem;
+          }
+          .btn {
+            &:hover {
+              background: rgba(0, 0, 0, 0.03);
+              background: $blue;
+              svg {
+                line {
+                  stroke: white;
+                }
+              }
+            }
+          }
+        }
+      }
+      &:focus-within {
+        input {
+          border-color: $blue !important;
+        }
+        .productSearchList {
+          display: block;
+        }
+      }
+    }
+    .productSearch,
+    .products {
+      li {
+        padding: 0.5rem 1rem;
+        display: flex;
+        align-items: center;
+        grid-gap: 1rem;
+        img {
+          height: 3rem;
+          width: 3rem;
+        }
+        &:hover {
+          background: rgba(0, 0, 0, 0.03);
+          .btn {
+            display: grid;
+          }
+        }
+        .productDetail {
+          flex: 1;
+          .name {
+            font-weight: 500;
+          }
+          .price {
+            font-size: 0.8rem;
+            color: rgba(0, 0, 0, 0.5);
+          }
+        }
+        .btn {
+          background: white;
+          transform: scale(0.8);
+          display: none;
+          place-items: center;
+          border: none;
+          outline: none;
+          padding: 0.5rem;
+          border-radius: 50%;
+          cursor: pointer;
+          border: 1px solid rgba(0, 0, 0, 0.05);
+          box-shadow: 0 0.2rem 0.4rem rgba(0, 0, 0, 0.08);
+          &:hover {
+            background: rgba(0, 0, 0, 0.03);
+            background: $blue;
+            svg {
+              line {
+                stroke: white;
+              }
+            }
+          }
+        }
+      }
+    }
+    .products {
+      .count {
+        padding: 0.5rem 0;
+        display: flex;
+        justify-content: space-between;
+        .totalProduct {
+          font-size: 1.1rem;
+          font-weight: 500;
+          color: $blue;
+        }
+        button {
+          border: none;
+          outline: none;
+          background: none;
+          display: grid;
+          place-items: center;
+          transform: rotate(0);
+          &.open {
+            transform: rotate(180deg);
+          }
+          svg {
+            transform: rotate(-90deg);
+          }
+        }
+      }
+      ul {
+        border-top: 1px solid rgba(0, 0, 0, 0.3);
+        padding: 0.5rem 0;
+        li {
+          svg {
+            line {
+              stroke: $red;
+              stroke: $red;
+            }
+          }
+          .btn {
+            &:hover {
+              background: $red;
+            }
+          }
+        }
       }
     }
     .amount {
@@ -1722,6 +2152,7 @@ $red: #ff5757;
   .leftSection {
     flex: 1;
     display: grid;
+    grid-template-rows: repeat(4, min-content);
     .nameTag {
       h2 {
         font-weight: 400;
