--- a/client/src/components/styles/userStart.scss
+++ b/client/src/components/styles/userStart.scss
@@ -68,12 +68,14 @@ $red: #ff5757;
         grid-gap: 1rem;
         grid-row-gap: 1.5rem;
         grid-template-columns: 1fr 1fr;
-        input {
+        input,
+        textarea {
           outline: none;
           font-size: 0.95rem;
           padding: 0.85rem 1.3rem;
           border-radius: 2rem;
           border: 1px solid rgba(0, 0, 0, 0.4);
+          // resize: none;
           &[name="firstName"] {
             grid-row: 1/2;
             grid-column: 1/2;
@@ -89,11 +91,17 @@ $red: #ff5757;
         }
         input,
         .pass,
-        .repeatPass {
+        .repeatPass,
+        .dscr {
           input {
             width: 100%;
           }
           grid-column: 1/3;
+        }
+        .dscr {
+          max-width: 100%;
+          border-radius: 1.5rem;
+          min-height: 8rem;
         }
         section {
           position: relative;
