--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -70,3 +70,33 @@ input::-webkit-inner-spin-button {
     }
   }
 }
+
+.modal.mobileApp {
+  height: 100%;
+  max-height: 100vh !important;
+  padding: 2rem;
+  font-size: 1.2rem;
+  display: grid;
+  place-items: center;
+  button {
+    bottom: 3rem;
+    position: absolute;
+    border: none;
+    outline: none;
+    background: none;
+    text-decoration: underline;
+    font-style: italic;
+    color: rgba(0, 0, 0, 0.5);
+  }
+  .wrapper {
+    display: grid;
+    grid-gap: 2rem;
+    text-align: center;
+    img {
+      width: min-content;
+      border-radius: 0.7rem;
+      box-shadow: 0 0 0.75rem rgba(0, 0, 0, 0.1);
+      max-width: 7rem;
+    }
+  }
+}
