--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -6,6 +6,14 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+  -webkit-tap-highlight-color: transparent;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
   overflow-x: hidden;
 }
 
@@ -38,7 +46,7 @@ input::-webkit-inner-spin-button {
 #portal,
 #confirm {
   position: fixed;
-  height: 100vh;
+  height: calc(var(--vh) * 100);
   width: 100vw;
   top: 0;
   left: 0;
@@ -61,7 +69,7 @@ input::-webkit-inner-spin-button {
     pointer-events: all;
     z-index: 10;
     background: white;
-    max-height: calc(100vh - 2rem);
+    max-height: calc((var(--vh) * 100) - 2rem);
     & ~ .modalBackdrop {
       z-index: 10;
       & ~ .modal {
@@ -73,7 +81,7 @@ input::-webkit-inner-spin-button {
 
 .modal.mobileApp {
   height: 100%;
-  max-height: 100vh !important;
+  height: calc(var(--vh) * 100);
   padding: 2rem;
   font-size: 1.2rem;
   display: grid;
@@ -97,6 +105,15 @@ input::-webkit-inner-spin-button {
       border-radius: 0.7rem;
       box-shadow: 0 0 0.75rem rgba(0, 0, 0, 0.1);
       max-width: 7rem;
+    }
+  }
+}
+
+@media only screen and (max-width: 480px) {
+  #portal,
+  #confirm {
+    .modal {
+      max-height: calc(var(--vh) * 100);
     }
   }
 }
