--- a/client/src/components/styles/userStart.scss
+++ b/client/src/components/styles/userStart.scss
@@ -5,14 +5,13 @@ $red: #ff5757;
 .userStart {
   padding: 2rem;
   display: flex;
-  height: calc(var(--vh) * 100);
   grid-gap: 3rem;
   margin: auto;
   max-width: 1460px;
   .banner {
-    margin: auto 0;
+    height: 100%;
     flex: 1;
-    header {
+    .header {
       h3 {
         font-size: 2rem;
         color: $blue;
@@ -26,7 +25,8 @@ $red: #ff5757;
       margin-bottom: 4rem;
     }
     .illustration {
-      max-width: 37vw;
+      width: 100%;
+      max-width: 35rem;
     }
   }
   .forms {
@@ -35,7 +35,6 @@ $red: #ff5757;
     box-shadow: 0 0 3rem rgba(0, 0, 0, 0.1);
     border-radius: 0.75rem;
     background: white;
-    min-height: 80vh;
     display: grid;
     max-width: 33rem;
     .formWrapper {
@@ -43,12 +42,13 @@ $red: #ff5757;
       width: 100%;
       margin: auto;
       display: grid;
-      grid-gap: 2rem;
+      grid-gap: 1.5rem;
       padding: 4rem 3rem;
       padding-top: 2rem;
       .logo {
         margin: 0.5rem auto;
-        max-height: 3rem;
+        margin-top: -0.5rem;
+        width: 100%;
       }
       .title {
         font-size: 1.4rem;
@@ -66,7 +66,7 @@ $red: #ff5757;
       form {
         display: grid;
         grid-gap: 1rem;
-        grid-row-gap: 1.5rem;
+        grid-row-gap: 1rem;
         grid-template-columns: 1fr 1fr;
         input,
         textarea {
@@ -75,7 +75,6 @@ $red: #ff5757;
           padding: 0.85rem 1.3rem;
           border-radius: 2rem;
           border: 1px solid rgba(0, 0, 0, 0.4);
-          // resize: none;
           &[name="firstName"] {
             grid-row: 1/2;
             grid-column: 1/2;
@@ -107,11 +106,15 @@ $red: #ff5757;
           position: relative;
         }
         & > .checkbox {
+          cursor: pointer;
           grid-column: 1/3;
           display: flex;
           align-items: center;
           grid-gap: 1rem;
           margin: 0.75rem auto;
+          a {
+            text-decoration: underline;
+          }
         }
         button {
           margin-top: 1rem;
@@ -145,7 +148,7 @@ $red: #ff5757;
         }
       }
       &.login {
-        grid-gap: 3.5rem;
+        grid-gap: 2rem;
         .pass {
           grid-template-columns: 1fr;
           display: grid;
@@ -156,6 +159,13 @@ $red: #ff5757;
             margin-right: 0;
             color: $blue;
             font-weight: 500;
+          }
+        }
+      }
+      &.register {
+        form {
+          & > .checkbox {
+            width: 100%;
           }
         }
       }
@@ -193,7 +203,7 @@ $red: #ff5757;
     height: auto;
     .banner {
       padding: 1rem 0;
-      header {
+      .header {
         text-align: center;
         margin: auto;
         h3 {
