--- a/client/src/components/styles/account.scss
+++ b/client/src/components/styles/account.scss
@@ -197,7 +197,12 @@ $red: #ff5757;
       }
     }
     main {
+      // border: 1px dashed red;
       flex: 1;
+      overflow: auto;
+      height: calc(100% + 2rem);
+      margin: -1rem 0;
+      padding: 1rem 0;
     }
   }
   .mobileMenu {
@@ -250,10 +255,6 @@ $red: #ff5757;
 }
 
 .homeContainer {
-  overflow-y: auto;
-  height: calc(100% + 2rem);
-  margin: -1rem 0;
-  padding: 1rem 0;
   .userType {
     padding: 2rem 4rem;
     display: flex;
@@ -416,6 +417,27 @@ $red: #ff5757;
   .benner {
     margin-bottom: 2rem;
   }
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  footer {
+    margin: auto;
+    margin-bottom: 0;
+    border-top: 1px solid rgba(0, 0, 0, 0.1);
+    padding: 2rem;
+    padding-bottom: 1rem;
+    .links {
+      font-size: 0.9rem;
+      color: rgba(0, 0, 0, 0.5);
+      display: flex;
+      flex-wrap: wrap;
+      grid-gap: 2.5rem;
+      grid-row-gap: 1rem;
+      a:hover {
+        text-decoration: underline;
+      }
+    }
+  }
 }
 .profile {
   display: flex;
@@ -512,11 +534,7 @@ $red: #ff5757;
   }
 }
 .holdContainer {
-  overflow-y: auto;
-  height: calc(100% + 2rem);
-  margin: -1rem 0;
   margin-left: 3rem;
-  padding: 1rem 0;
   .head {
     z-index: 10;
     position: sticky;
@@ -553,9 +571,9 @@ $red: #ff5757;
       border-radius: 0.7rem;
       display: flex;
       flex-wrap: wrap;
-      grid-gap: 4rem;
+      justify-content: space-between;
+      grid-row-gap: 1rem;
       .clientDetail {
-        flex: 1;
         font-size: 0.9rem;
         .profile {
           margin-bottom: 1rem;
@@ -585,12 +603,13 @@ $red: #ff5757;
         display: flex;
         align-items: center;
         margin-bottom: 1rem;
-        transform: scale(0.8);
         .step {
           position: relative;
           .icons {
             display: grid;
             svg {
+              width: 3.2rem;
+              height: 3.2rem;
               display: none;
               grid-column: 1/2;
               grid-row: 1/2;
@@ -599,7 +618,7 @@ $red: #ff5757;
           p {
             position: absolute;
             white-space: nowrap;
-            font-size: 1rem;
+            font-size: 0.75rem;
             text-align: center;
             left: 50%;
             transform: translate(-50%, 50%);
@@ -609,6 +628,7 @@ $red: #ff5757;
         .progress {
           display: grid;
           svg {
+            width: 8rem;
             opacity: 0;
             margin: auto;
             grid-column: 1/2;
@@ -1195,10 +1215,7 @@ $red: #ff5757;
 }
 
 .transactionContainer {
-  height: calc(100% + 2rem);
-  overflow-y: auto;
-  margin: -1rem 0;
-  padding: 1rem 3rem;
+  padding: 0 3rem;
   .benner {
     padding: 1rem 0;
     font-size: 1.2rem;
@@ -1219,7 +1236,7 @@ $red: #ff5757;
     .transaction {
       display: flex;
       justify-content: space-between;
-      grid-column-gap: 5rem;
+      grid-column-gap: 1rem;
       grid-row-gap: 1rem;
       border-radius: 0.7rem;
       padding: 1.5rem 1.25rem;
@@ -1271,10 +1288,7 @@ $red: #ff5757;
 }
 
 .productContainer {
-  height: calc(100% + 2rem);
-  overflow-y: auto;
-  margin: -1rem 0;
-  padding: 1rem 3rem;
+  padding: 0 1rem;
   .benner {
     padding: 1rem 0;
     font-size: 1.2rem;
@@ -2162,10 +2176,7 @@ $red: #ff5757;
 .walletContainer {
   display: flex;
   flex-wrap: wrap;
-  height: calc(100% + 2rem);
-  overflow-y: auto;
-  margin: -1rem 0;
-  padding: 1rem;
+  padding: 0 1rem;
   grid-gap: 1.5rem;
   padding-right: 1rem;
   .leftSection {
@@ -2606,6 +2617,7 @@ $red: #ff5757;
   }
 }
 .disputeForm,
+.contactForm,
 .ticketReplyFormModal,
 .ticketFormModal {
   max-width: 35rem;
@@ -2684,8 +2696,19 @@ $red: #ff5757;
   }
 }
 
+.contactForm {
+  form {
+    .btns {
+      grid-template-columns: 1fr !important;
+      button {
+        margin-right: 0 !important;
+      }
+    }
+  }
+}
+
 .supportContainer {
-  padding-left: 1rem;
+  padding: 0 1rem;
   .benner {
     background: $blue;
     padding: 1.5rem 2rem;
@@ -2742,52 +2765,76 @@ $red: #ff5757;
       }
     }
   }
-  .feedback {
-    border-radius: 0.7rem;
-    max-width: 25rem;
-    box-shadow: 0 0 0.5rem rgba(0, 0, 0, 0.1);
-    padding: 2rem 1.5rem;
-    form {
-      width: 100%;
-      display: flex;
-      grid-gap: 1rem;
-      align-items: center;
-      margin-bottom: 1.5rem;
-      textarea {
-        border: none;
-        flex: 1;
-        border-bottom: 1px solid rgba(0, 0, 0, 0.3);
-        outline: none;
-        font-size: 1rem;
-        &:focus {
-          border-color: $blue;
-        }
-      }
-      button {
-        padding: 0.5rem 1rem;
-        border: 1px solid $blue;
+  .content {
+    display: flex;
+    grid-gap: 1rem;
+    padding: 0;
+    flex-wrap: wrap;
+    .faq {
+      flex: 1;
+      .label {
+        font-size: 1.5rem;
         color: $blue;
-        background: $lightGreen2;
-        font-weight: 600;
-        border-radius: 2rem;
-        &:hover {
-          background: $blue;
-          color: white;
+        margin-bottom: 1rem;
+      }
+      ul {
+        display: grid;
+        grid-gap: 1rem;
+        li {
+          h4 {
+            font-size: 1.2rem;
+            color: $blue;
+            font-weight: 500;
+            margin-bottom: 0.5rem;
+          }
         }
       }
     }
-    .feedbackLink {
-      font-weight: 500;
-      color: $blue;
+    .feedback {
+      display: none;
+      border-radius: 0.7rem;
+      max-width: 25rem;
+      box-shadow: 0 0 0.5rem rgba(0, 0, 0, 0.1);
+      padding: 2rem 1.5rem;
+      form {
+        width: 100%;
+        display: flex;
+        grid-gap: 1rem;
+        align-items: center;
+        margin-bottom: 1.5rem;
+        textarea {
+          border: none;
+          flex: 1;
+          border-bottom: 1px solid rgba(0, 0, 0, 0.3);
+          outline: none;
+          font-size: 1rem;
+          &:focus {
+            border-color: $blue;
+          }
+        }
+        button {
+          padding: 0.5rem 1rem;
+          border: 1px solid $blue;
+          color: $blue;
+          background: $lightGreen2;
+          font-weight: 600;
+          border-radius: 2rem;
+          &:hover {
+            background: $blue;
+            color: white;
+          }
+        }
+      }
+      .feedbackLink {
+        font-weight: 500;
+        color: $blue;
+      }
     }
   }
 }
 
 .profileContainer {
-  height: calc(100% + 2rem);
-  overflow-y: auto;
-  padding: 1rem 3rem;
-  margin: -1rem 0;
+  padding: 0 3rem;
   .benner {
     padding: 1.5rem 0;
     .profileImg {
