--- a/client/src/components/styles/account.scss
+++ b/client/src/components/styles/account.scss
@@ -1,10 +1,4 @@
-$blue: #336cf9;
-$green: #1be6d6;
-$lightGreen: #e7f6fc;
-$lightGreen2: #f8faff;
-$lightPink: #f9eaf4;
-$pink: #f64bbd;
-$red: #ff5757;
+@import "variables";
 
 .account {
   height: calc(var(--vh) * 100);
@@ -145,12 +139,12 @@ $red: #ff5757;
           }
           .acc {
             padding: 0;
+            background: none;
             img {
               height: 2.9rem;
               width: 2.9rem;
               border-radius: 50%;
               object-fit: cover;
-              background: $blue;
             }
           }
           display: flex;
@@ -197,7 +191,6 @@ $red: #ff5757;
       }
     }
     main {
-      // border: 1px dashed red;
       flex: 1;
       overflow: auto;
       height: calc(100% + 2rem);
@@ -362,7 +355,6 @@ $red: #ff5757;
               width: 3rem;
               border-radius: 3rem;
               object-fit: cover;
-              background-color: $blue;
             }
             .name {
               font-weight: 500;
@@ -405,7 +397,6 @@ $red: #ff5757;
           margin: auto;
           height: 3.3rem;
           width: 3.3rem;
-          background: $blue;
           border-radius: 50%;
         }
         .name {
@@ -446,7 +437,6 @@ $red: #ff5757;
     height: 2.8rem;
     border-radius: 50%;
     object-fit: cover;
-    background: $blue;
   }
   align-items: center;
   grid-gap: 1rem;
@@ -888,327 +878,6 @@ $red: #ff5757;
             }
           }
         }
-      }
-    }
-  }
-}
-
-.chatContainer {
-  height: 100%;
-  display: flex;
-  grid-gap: 1rem;
-  .contactsContainer {
-    display: grid;
-    grid-template-rows: min-content min-content 1fr;
-    .userCard {
-      max-width: 18rem;
-      background: $lightGreen2;
-      padding: 1rem;
-      border-radius: 0.7rem;
-      .profile {
-        display: flex;
-        grid-gap: 0.75rem;
-        overflow: hidden;
-        max-width: 100%;
-        img {
-          height: 4.5rem;
-          width: 4.5rem;
-          object-fit: cover;
-          background: $blue;
-          border-radius: 50%;
-          flex-shrink: 0;
-        }
-        .details {
-          font-size: 0.9rem;
-          .name {
-            text-transform: capitalize;
-            font-size: 1.1rem;
-            font-weight: 500;
-          }
-          .phone {
-            font-weight: 500;
-            opacity: 1;
-          }
-          a {
-            display: block;
-          }
-          a,
-          .add {
-            opacity: 0.7;
-          }
-        }
-      }
-      .clas {
-        .status {
-          text-transform: capitalize;
-          padding: 0.5rem;
-        }
-        margin-top: 1rem;
-        align-items: center;
-        display: none; // ----------------
-        justify-content: space-between;
-        button {
-          border: 1px solid $blue;
-          padding: 0.6rem 1.25rem;
-          border-radius: 3rem;
-          background: white;
-          color: $blue;
-          cursor: pointer;
-          &:hover {
-            color: white;
-            background: $blue;
-          }
-        }
-      }
-      .placeholder {
-        text-align: center;
-        font-style: italic;
-        color: rgba(0, 0, 0, 0.5);
-      }
-    }
-    .label {
-      height: min-content;
-      font-weight: 500;
-      margin: 0.5rem 0;
-    }
-    width: 18rem;
-    .peopleWrapper {
-      max-height: 100%;
-      height: 100%;
-      border-radius: 0.7rem;
-      box-shadow: 0 0 0.5rem rgba(0, 0, 0, 0.08);
-      overflow-y: auto;
-      .people {
-        height: min-content;
-        display: grid;
-        padding: 1rem;
-        align-items: flex-start;
-        width: 100%;
-        li {
-          padding: 0.75rem;
-          border-radius: 0.5rem;
-          cursor: pointer;
-          display: flex;
-          align-items: center;
-          grid-gap: 1rem;
-          img {
-            height: 3.2rem;
-            width: 3.2rem;
-            background: $blue;
-            object-fit: cover;
-            border-radius: 50%;
-            flex-shrink: 0;
-          }
-          overflow: hidden;
-          div {
-            display: grid;
-            width: 100%;
-            position: relative;
-            .name {
-              text-transform: capitalize;
-            }
-            .lastMessage {
-              font-size: 0.85em;
-              color: rgba(0, 0, 0, 0.5);
-              display: -webkit-box;
-              text-overflow: ellipsis;
-              -webkit-line-clamp: 1;
-              -webkit-box-orient: vertical;
-              overflow: hidden;
-            }
-            .unread {
-              background: $red;
-              color: white;
-              font-weight: 500;
-              height: 1.7rem;
-              width: 1.7rem;
-              border-radius: 2rem;
-              display: grid;
-              place-items: center;
-              position: absolute;
-              right: 0;
-              top: 50%;
-              transform: translateY(-50%);
-            }
-          }
-          &.active {
-            background: #f0f0f0 !important;
-          }
-          &:hover {
-            background: rgba(#f0f0f0, 0.5);
-          }
-        }
-        .placeholder {
-          padding: 1.25rem 0;
-          text-align: center;
-          font-style: italic;
-          color: rgba(0, 0, 0, 0.57);
-        }
-      }
-    }
-  }
-  .chat {
-    flex: 1;
-    background: $lightGreen2;
-    border-radius: 1rem;
-    display: grid;
-    grid-template-rows: min-content 1fr min-content;
-    .chatHead {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      height: min-content;
-      border-bottom: 1px solid rgba(0, 0, 0, 0.2);
-      padding: 1rem;
-      .profile {
-        display: flex;
-        grid-gap: 1rem;
-        align-items: center;
-        .back {
-          display: none;
-        }
-        img {
-          height: 3rem;
-          width: 3rem;
-          border-radius: 50%;
-          object-fit: cover;
-          background: $blue;
-        }
-        .name {
-          text-transform: capitalize;
-          .lastSeen {
-            display: block;
-            font-size: 0.8em;
-            color: rgba(0, 0, 0, 0.5);
-          }
-        }
-      }
-      .pay {
-        padding: 0.5rem 1.5rem;
-        background: linear-gradient(90deg, $blue 0%, $green 100%);
-        color: white;
-        font-weight: 500;
-        border-radius: 2rem;
-        &:hover {
-          color: $blue;
-          background: none;
-          box-shadow: inset 0 0 0 2px $blue;
-        }
-      }
-    }
-    .chatWrapper {
-      height: 100%;
-      overflow-y: scroll;
-      padding: 1rem 0;
-      .chats {
-        padding: 0 1rem;
-        min-height: 100%;
-        display: flex;
-        flex-direction: column;
-        float: right;
-        grid-gap: 1px;
-        .bubble {
-          width: 100%;
-          margin: 0 auto;
-          display: grid;
-          .dateStamp {
-            padding: 0.25rem 0.6rem;
-            background: rgba(0, 0, 0, 0.05);
-            font-size: 0.85rem;
-            margin: 1rem auto;
-            border-radius: 4px;
-            color: rgba(0, 0, 0, 0.6);
-            font-weight: 500;
-          }
-          .text {
-            max-width: 80%;
-            width: max-content;
-            padding: 0.7rem 1rem;
-            color: white;
-          }
-          .timestamp {
-            font-size: 0.8rem;
-            color: rgba(0, 0, 0, 0.6);
-            margin-bottom: 0.5rem;
-          }
-          &.user {
-            display: grid;
-            .text {
-              margin: auto;
-              margin-right: 0;
-              border-radius: 1rem 1rem 0 1rem;
-              background: #054677;
-            }
-            .timestamp {
-              text-align: right;
-            }
-          }
-          &.client {
-            margin-left: 0;
-            & ~ &.user {
-              border: 1px dashed red;
-            }
-            .text {
-              border-radius: 1rem 1rem 1rem 0;
-              background: $blue;
-            }
-          }
-        }
-      }
-    }
-    form {
-      margin-bottom: 1rem;
-      display: flex;
-      padding: 0 1rem;
-      grid-gap: 0.5rem;
-      section {
-        position: relative;
-        input[type="text"] {
-          outline: none;
-          padding: 0 1rem;
-          font-size: 1rem;
-          width: 100%;
-          height: 100%;
-          border-radius: 2rem;
-          border: 1px solid rgba(0, 0, 0, 0.54);
-        }
-        .fileUpload {
-          display: none;
-          cursor: pointer;
-          background: rgba(0, 0, 0, 0.02);
-          position: absolute;
-          right: 2px;
-          top: 50%;
-          transform: translateY(-50%);
-          height: 90%;
-          width: 2.2rem;
-          border-radius: 50%;
-          overflow: hidden;
-          input[type="file"] {
-            font-size: 100px;
-            opacity: 0;
-          }
-        }
-        flex: 1;
-      }
-      button {
-        height: 2.5rem;
-        width: 2.5rem;
-        border: none;
-        background: $blue;
-        border-radius: 4rem;
-        svg {
-          transform: translate(-10%, 10%);
-        }
-      }
-    }
-    .startChat {
-      margin: auto;
-      grid-row: 1/-1;
-      display: grid;
-      grid-gap: 0.7rem;
-      svg {
-        margin: auto;
       }
     }
   }
@@ -2050,7 +1719,6 @@ $red: #ff5757;
       border-radius: 2rem;
       z-index: 5;
       position: relative;
-      background: $blue;
     }
     .detail {
       cursor: pointer;
@@ -2617,7 +2285,6 @@ $red: #ff5757;
   }
 }
 .disputeForm,
-.contactForm,
 .ticketReplyFormModal,
 .ticketFormModal {
   max-width: 35rem;
@@ -2847,7 +2514,6 @@ $red: #ff5757;
         height: 100%;
         width: 100%;
         object-fit: cover;
-        background: $blue;
       }
       svg {
         position: absolute;
@@ -2879,6 +2545,7 @@ $red: #ff5757;
     grid-gap: 1.5rem;
     div {
       .name {
+        text-transform: capitalize;
         font-size: 1.3rem;
         margin-bottom: 0.6rem;
       }
@@ -3304,41 +2971,6 @@ $red: #ff5757;
           background: white;
         }
         margin-bottom: 2rem;
-      }
-    }
-  }
-  .chatContainer {
-    padding: 0 1rem;
-    .contactsContainer {
-      grid-template-rows: min-content 1fr;
-      width: 100%;
-      margin-bottom: 1rem;
-    }
-    .userCard {
-      display: none;
-    }
-    .chat {
-      display: none;
-    }
-    &.chatOpen {
-      padding: 0;
-      .contactsContainer {
-        display: none;
-      }
-      .chat {
-        display: grid;
-        .chatHead {
-          .profile {
-            .back {
-              display: grid;
-              place-items: center;
-              margin-right: -0.5rem;
-              border: none;
-              outline: none;
-              background: none;
-            }
-          }
-        }
       }
     }
   }
