--- a/client/src/components/styles/landingPage.scss
+++ b/client/src/components/styles/landingPage.scss
@@ -1,5 +1,4 @@
-$blue: #336cf9;
-$green: #1be6d6;
+@import "variables";
 
 .landingPage {
   min-height: calc(var(--vh) * 100);
@@ -70,11 +69,7 @@ $green: #1be6d6;
           color: white;
           font-weight: 500;
           padding: 0.7rem 1rem;
-          background-image: linear-gradient(
-            165deg,
-            rgba(51, 108, 249, 1) 20%,
-            rgba(27, 230, 214, 1) 150%
-          );
+          background-image: linear-gradient(165deg, $blue 20%, $green 150%);
           &:hover {
             color: $blue;
             background: white;
@@ -130,11 +125,7 @@ $green: #1be6d6;
       }
     }
   }
-  background: linear-gradient(
-    160deg,
-    rgba(51, 108, 249, 1) 42%,
-    rgba(27, 230, 214, 1) 100%
-  );
+  background: linear-gradient(160deg, $blue 42%, $green 100%);
 }
 
 @media only screen and (max-width: 1100px) {
