--- a/client/src/components/styles/account.scss
+++ b/client/src/components/styles/account.scss
@@ -1016,6 +1016,9 @@
       img {
         height: 4rem;
         width: 4rem;
+        object-fit: contain;
+        border: 1px solid rgba(0, 0, 0, 0.07);
+        background: white;
       }
       .name {
         font-size: 1.1rem;
@@ -1503,6 +1506,10 @@
           box-shadow: inset 0 0 0 2px $blue;
         }
       }
+    }
+    &.loading {
+      pointer-events: none;
+      opacity: 0.7;
     }
   }
 }
@@ -2317,15 +2324,6 @@
       }
       textarea {
         min-height: 4rem;
-      }
-      &.fileInput {
-        ul {
-          margin-top: 1.5rem;
-        }
-        input {
-          width: min-content;
-          margin-top: 1rem;
-        }
       }
       &.btns {
         display: grid;
