--- a/client/src/components/styles/elements.scss
+++ b/client/src/components/styles/elements.scss
@@ -99,3 +99,100 @@
     }
   }
 }
+
+.fileInput {
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  background: rgba(0, 0, 0, 0.03);
+  display: flex;
+  grid-gap: 0.5rem;
+  flex-wrap: wrap;
+  padding: 0.75rem;
+  border-radius: 1rem;
+  .file {
+    position: relative;
+    border-radius: 0.5rem;
+    overflow: hidden;
+    box-shadow: 0 0 0.2rem rgba(0, 0, 0, 0.2);
+    min-width: 5rem;
+    .close {
+      z-index: 10;
+      position: absolute;
+      top: 0.3rem;
+      right: 0.3rem;
+      border: 1px solid white;
+      border-radius: 50%;
+      background: rgba(0, 0, 0, 0.44);
+      height: 2rem;
+      width: 2rem;
+      display: grid;
+      place-items: center;
+      margin: 0;
+      padding: 0;
+      cursor: pointer;
+      svg {
+        transform: none;
+        path {
+          fill: white;
+        }
+      }
+      &:hover {
+        background: black;
+        box-shadow: none;
+      }
+    }
+    &.thumb {
+      max-height: 6rem;
+      img {
+        max-height: 6rem;
+      }
+    }
+    &.any {
+      border: 1px solid rgba(0, 0, 0, 0.15);
+      background: white;
+      padding: 0.75rem;
+      max-width: 7rem;
+      height: 6rem;
+      overflow: hidden;
+      display: grid;
+      justify-content: center;
+      align-items: center;
+      img {
+        height: 1.5rem;
+      }
+      .filename {
+        font-size: 0.8rem;
+        display: -webkit-box;
+        text-overflow: ellipsis;
+        -webkit-line-clamp: 2;
+        -webkit-box-orient: vertical;
+        overflow: hidden;
+      }
+    }
+  }
+  .uploadBtn {
+    border: 1px solid rgba(0, 0, 0, 0.2);
+    background: white;
+    border-radius: 0.5rem;
+    height: 6rem;
+    width: 6rem;
+    overflow: hidden;
+    display: grid;
+    place-items: center;
+    &:hover {
+      background: rgba(0, 0, 0, 0.04);
+    }
+    input {
+      cursor: pointer;
+      font-size: 10rem !important;
+      opacity: 0;
+    }
+    svg {
+      pointer-events: none;
+    }
+    input,
+    svg {
+      grid-column: 1/2;
+      grid-row: 1/2;
+    }
+  }
+}
